// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gif List should match snapshot 1`] = `
<div>
  <div
    class="infinite-scroll-component__outerdiv"
  >
    <div
      class="infinite-scroll-component overflow-hidden"
      style="height: auto; overflow: auto;"
    >
      <div
        class="g-2 row row-cols-xl-4 row-cols-md-3 row-cols-2"
        data-testid="gif-list"
      >
        <div>
          <div
            class="lazyload-wrapper "
          >
            <div
              class="mt-2 card"
            >
              <img
                class="card-img-top"
                src="placeholder-img.png"
              />
              <div
                class="card-body"
              >
                <div
                  class="placeholder-glow card-title h5"
                >
                  <span
                    class="col-6 placeholder"
                  />
                </div>
                <p
                  class="placeholder-glow card-text"
                >
                  <span
                    class="col-7 placeholder"
                  />
                   
                  <span
                    class="col-4 placeholder"
                  />
                   
                  <span
                    class="col-4 placeholder"
                  />
                   
                  <span
                    class="col-6 placeholder"
                  />
                   
                  <span
                    class="col-8 placeholder"
                  />
                </p>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="lazyload-wrapper "
          >
            <div
              class="mt-2 card"
            >
              <img
                class="card-img-top"
                src="placeholder-img.png"
              />
              <div
                class="card-body"
              >
                <div
                  class="placeholder-glow card-title h5"
                >
                  <span
                    class="col-6 placeholder"
                  />
                </div>
                <p
                  class="placeholder-glow card-text"
                >
                  <span
                    class="col-7 placeholder"
                  />
                   
                  <span
                    class="col-4 placeholder"
                  />
                   
                  <span
                    class="col-4 placeholder"
                  />
                   
                  <span
                    class="col-6 placeholder"
                  />
                   
                  <span
                    class="col-8 placeholder"
                  />
                </p>
              </div>
            </div>
          </div>
        </div>
        <div />
      </div>
      <p
        style="text-align: center;"
      >
        <b>
          Yay! You have seen it all
        </b>
      </p>
    </div>
  </div>
</div>
`;

exports[`Gif List should not show end message when having more items to show 1`] = `
<div>
  <div
    class="infinite-scroll-component__outerdiv"
  >
    <div
      class="infinite-scroll-component overflow-hidden"
      style="height: auto; overflow: auto;"
    >
      <div
        class="g-2 row row-cols-xl-4 row-cols-md-3 row-cols-2"
        data-testid="gif-list"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        class="g-2 row row-cols-xl-4 row-cols-md-3 row-cols-2"
      >
        <div
          class="col"
        >
          <div
            class="mt-2 card"
          >
            <img
              class="card-img-top"
              src="placeholder-img.png"
            />
            <div
              class="card-body"
            >
              <div
                class="placeholder-glow card-title h5"
              >
                <span
                  class="col-6 placeholder"
                />
              </div>
              <p
                class="placeholder-glow card-text"
              >
                <span
                  class="col-7 placeholder"
                />
                 
                <span
                  class="col-4 placeholder"
                />
                 
                <span
                  class="col-4 placeholder"
                />
                 
                <span
                  class="col-6 placeholder"
                />
                 
                <span
                  class="col-8 placeholder"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="mt-2 card"
          >
            <img
              class="card-img-top"
              src="placeholder-img.png"
            />
            <div
              class="card-body"
            >
              <div
                class="placeholder-glow card-title h5"
              >
                <span
                  class="col-6 placeholder"
                />
              </div>
              <p
                class="placeholder-glow card-text"
              >
                <span
                  class="col-7 placeholder"
                />
                 
                <span
                  class="col-4 placeholder"
                />
                 
                <span
                  class="col-4 placeholder"
                />
                 
                <span
                  class="col-6 placeholder"
                />
                 
                <span
                  class="col-8 placeholder"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="mt-2 card"
          >
            <img
              class="card-img-top"
              src="placeholder-img.png"
            />
            <div
              class="card-body"
            >
              <div
                class="placeholder-glow card-title h5"
              >
                <span
                  class="col-6 placeholder"
                />
              </div>
              <p
                class="placeholder-glow card-text"
              >
                <span
                  class="col-7 placeholder"
                />
                 
                <span
                  class="col-4 placeholder"
                />
                 
                <span
                  class="col-4 placeholder"
                />
                 
                <span
                  class="col-6 placeholder"
                />
                 
                <span
                  class="col-8 placeholder"
                />
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
